<resources>
    <string name="app_name">Amsler Grid Test</string>
    <string name="action_settings">Settings</string>
    <string name="maintext">How to do the Amsler Grid Test?</string>
    <string name="ok">OK, GOT IT</string>
    <string name="homeamsler">Home Amsler Chart</string>
    <string name="clinicamsler">Clinical Amsler Chart</string>
    <string name="instruct">Instructions</string>
    <string name="lang">Languages</string>
    <string name="choose">Choose eye to test</string>
    <string name="lefteye">Left Eye</string>
    <string name="righteye">Right Eye</string>
    <string name="lefteyeside">keep your right eye closed while testing left eye. </string>
    <string name="righteyeside">keep your left eye closed while testing right eye. </string>
    <string name="mark">Mark the area by drawing over the chart</string>
    <string name="done">Done</string>
    <string name="exit">Confirm Exit</string>
    <string name="exmsg">Closing would terminate the test. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="generate">SAVE REPORT</string>
    <string name="lefteyereport">Left Eye Report</string>
    <string name="righteyereport">Right Eye Report</string>
    <string name="defect">You may have central field defect. Please consult a doctor.  Thanks for taking test</string>
    <string name="nodefect">You donot have any central visual field defect. Thanks for taking test</string>
    <string name="success">Report stored to the phone storage</string>
    <string name="entername">Please enter your name</string>
    <string name="nameok">OK</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="place">Place</string>
    <string name="uid">UID</string>
    <string-array name="instructions">
        <item>Testing your eyes with an Amsler grid is easy and takes only a few minutes. Here are the basic steps</item>
        <item>Test your eyes under normal room lighting used for reading</item>
        <item>Wear eyeglasses you normally wear for reading (even if you wear only store-bought reading glasses)</item>
        <item>Hold the Amsler grid chart approximately 14 to 16 inches (i.e. 35 to 40 centimeters) from your eyes</item>
        <item>Test each eye separately: Cup your hand over one eye while testing the other eye</item>
        <item>During the test, answer the questions asked by marking on the chart</item>
    </string-array>
    <string-array name="homelist">
        <item>Chart 1</item>
        <item>Chart 2</item>
    </string-array>
    <string-array name="cliniclist">
        <item>Chart 1</item>
        <item>Chart 2</item>
        <item>Chart 3</item>
        <item>Chart 4</item>
        <item>Chart 5A</item>
        <item>Chart 5B</item>
        <item>Chart 6A</item>
        <item>Chart 6B</item>
        <item>Chart 7</item>
    </string-array>
    <string-array name="chart1">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Do you see the central black dot?</item>
        <item>Do any of the horizontal (---) or vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Does any of the square look differently?(while keeping your eye on the central dot)</item>
        <item>Are there any "holes" (missing areas) or dark areas in the grid?(while keeping your eye on the central dot)</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart2">
        <item>Imagine a midpoint where the 2 diagonal crossing lines connect.
            Always keep your eye focused in the imaginary midpoint of these diagonal lines.</item>
        <item>Is any area not clearly visible to your eye?</item>
        <item>Do any of the horizontal (---) or vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Does any of the square look differently?(while keeping your eye on the central dot)</item>
        <item>Are there any "holes" (missing areas) or dark areas in the grid?(while keeping your eye on the central dot)</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart3">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Is any red area not clearly visible to your eyes?</item>
        <item>Do any of the horizontal (---) or vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Are there any "holes" (missing areas) or dark areas in the grid?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart4">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Are there any "holes" (missing areas) or dark areas in the grid?(while keeping your eye on the central dot)</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart5a">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Do any of the vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart5b">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Do any of the horizontal (---) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart6a">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Do any of the vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart6b">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Do any of the horizontal (---) lines in the grid appear wavy, blurred or distorted?</item>
        <item>Are any corners and sides of the grid invisible?(while keeping your eye on the central dot)</item>
    </string-array>
    <string-array name="chart7">
        <item>Always keep your eye focused on the dot in the centre of the grid</item>
        <item>Are there any "holes" (missing areas) or dark areas in the grid?(while keeping your eye on the central dot)</item>
        <item>Does any of the square look differently?(while keeping your eye on the central dot)</item>
        <item>Do any of the horizontal (---) or vertical (|) lines in the grid appear wavy, blurred or distorted?</item>
    </string-array>
    <string-array name="codes">
        <item>6|5|0|1|2|3</item>
        <item>6|7|0|1|2|3</item>
        <item>6|4|1|2</item>
        <item>6|2|3</item>
        <item>6|0|3</item>
        <item>6|0|3</item>
        <item>6|0|3</item>
        <item>6|0|3</item>
        <item>6|2|1|0</item>
    </string-array>
</resources>
