<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#dddddd"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entername"
        android:id="@+id/namelabel"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textSize="14dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namelabel"
        android:id="@+id/nameofpatientclinic"
        android:lines="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameofpatientclinic"
        android:text="@string/sex"
        android:id="@+id/sexlabel"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textSize="14dp"/>
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_below="@id/sexlabel"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_below="@+id/radioSex"
        android:id="@+id/agelabel"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textSize="14dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agelabel"
        android:id="@+id/ageofpatientclinic"
        android:lines="1"
        android:inputType="number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:layout_below="@+id/ageofpatientclinic"
        android:id="@+id/placelabel"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textSize="14dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/placelabel"
        android:id="@+id/placeofpatientclinic"
        android:lines="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeofpatientclinic"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="#9889df"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/nameclinicok"
        android:text="@string/nameok"/>
</RelativeLayout>