<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#dddddd">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000000"
        android:id="@+id/titletext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/titletext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:weightSum="100"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lefteye"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="50"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="4dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/left"
                    android:id="@+id/A"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lefteye"
                    android:textSize="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/A"
                    android:textColor="#000000"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/righteye"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="50"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="4dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/right"
                    android:id="@+id/B"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/righteye"
                    android:textSize="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/B"
                    android:textColor="#000000"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>