<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linearLayout1"
    android:weightSum="1">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_view1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        card_view:cardCornerRadius="4dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/homeamsler" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_below="@+id/homeImage"
                android:text="@string/homeamsler"
                android:textSize="15dp"
                android:textColor="#000000"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_view2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.5"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        card_view:cardCornerRadius="4dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/clinicImage"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/clinicamsler"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="15dp"
                android:textColor="#000000"
                android:layout_below="@+id/clinicImage"
                android:text="@string/clinicamsler"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="30dp"
            android:layout_below="@id/linearLayout1"
            android:weightSum="1">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_view3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:id="@+id/instructionimage"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/instructions"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_below="@+id/instructionimage"
                        android:text="@string/instruct"
                        android:textSize="15dp"
                        android:textColor="#000000"
                         />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_view4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/languageimage"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/settings"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="15dp"
                        android:textColor="#000000"
                        android:layout_below="@+id/languageimage"
                        android:text="@string/lang"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>